[package]
name = "to_db"
version = "0.1.0"
authors = ["sansx <xiathxth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }


diesel = { version = "1.4.4", features = ["postgres", "serde_json"] }
dotenv = "0.15.0"







